I think the DB Shit works now